# polynomial

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  polynomial.cpp  polynomial.h  test  unit-test.cpp
